# harness-agent

./: .gitignore  .jarvis-graph.json  .project-graph-visual.html  CLAUDE.md  JARVIS.md  README.md  agent.py  harness-agent-flow.html  index.html  project_graph.html  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: windows.yml
.harness/: README.md
.harness/agents/: setup.md
.skills/example-skill/: SKILL.md
.skills/pr-review/: SKILL.md
harness/: __init__.py
jarvis/: __init__.py  __main__.py  bootstrap.py  cli.py  console.py  install_sync.py  main.py  path_resolve.py  project_context.py  prompt_refs.py  state.py  updater.py
jarvis/auth/: __init__.py  _zen_wire.py  anthropic_models.py  api_key.py  client.py  codex_client.py  codex_oauth_callback.py  (+14 more)
scripts/: _verify_tui.py  install  install-global  install.ps1  smoke-windows.ps1
tests/: test_ask_user_question.py  test_browser_bridge.py  test_browser_bridge_startup.py  test_browser_system_prompt.py  test_cli_web_args.py  test_client_codex_fallback.py  test_clipboard_utils.py  test_codex_oauth.py  test_command_modal.py  test_commands_catalog.py  test_console_mux.py  test_context_bundle.py  test_custom_commands.py  test_edit_fuzzy.py  test_empty_response.py  test_freebuff.py  test_harness_agent.py  test_install_sync.py  test_intro_anim.py  test_json_repair.py  test_lazy_context_loading.py  test_mcp_scope.py  test_memory_save_arguments.py  test_message_heal.py  test_model_persistence.py  test_model_picker_rows.py  test_model_provider_normalization.py  test_model_sources.py  test_multi_edit_scope.py  test_multi_edit_tool_runs.py  test_oauth.py  test_oauth_providers.py  test_opencode_thinking_options.py  test_opencode_usage.py  test_opus_48.py  test_path_resolve.py  test_pin_context.py  test_plan_mode.py  test_prompt_attachments.py  test_prompt_paste.py  (+15 more)
(+176 files in other folders)
