[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-jarvis"
version = "0.1.0"
description = "Jarvis terminal agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "rich>=13",
    "textual>=0.80",
    "pypdf>=4.0",
    "openpyxl>=3.0",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
include = ["harness*", "jarvis*"]
