[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-jarvis"
version = "0.1.0"
description = "Jarvis terminal agent for Windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.0",
    "rich>=13",
    "textual>=0.80",
    "pypdf>=4.0",
    "openpyxl>=3.0",
    "mcp>=1.0.0",
    "pywinauto>=0.6.8",
    "pyperclip>=1.8",
    "winrt-Windows.Media.Ocr>=2.0",
    "winrt-Windows.Graphics.Imaging>=2.0",
    "winrt-Windows.Storage>=2.0",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
include = ["harness*", "jarvis*"]
